monitoring/grafana-lgtm/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana-route
spec:
  parentRefs:
    - name: monitoring-gateway
      sectionName: https-grafana
  hostnames:
    - grafana.inspection.alpha.canada.ca
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: lgtm-distributed-grafana
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: alloy-route
spec:
  parentRefs:
    - name: monitoring-gateway
      sectionName: https-alloy
  hostnames:
    - alloy.inspection.alpha.canada.ca
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: alloy
          port: 12347
